modified codes for controller
